# diff_eq_solver

./: CMakeLists.txt  README.md
python/: circuit.py
src/: main.cpp
